--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-* {
-  background-color: white;
-  color: white;
+.clan {
+  background-color:white;
+  color: black;
+}
+body, #map {
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
