--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,25 @@
+
+html, body, #map {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#gmapC {
+  position: relative;
+}
+
+
 .clan {
-  background-color:black;
+  background-color: black;
   color: white;
 }
 
+
 #map {
-  height: 600px;
-  width: 100%
-}
-#foot {
-  height: 70px;
+  height: 100vh;
   width: 100%;
-  background-color: black
+  min-height: 100%;
+  max-height: none;
 }
-html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
