--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ html, body, #map {
 .clan {
   background-color: black;
   color: white;
+  height: 100%;
+  width: 100%;
 }
 
 
@@ -22,4 +24,13 @@ html, body, #map {
   width: 100%;
   min-height: 100%;
   max-height: none;
+}
+
+sapn {
+  display: block;
+  padding: 20px 80px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #fff;
+  border-bottom: 2px solid #fff;
 }
