--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,56 @@
+body, html,
+.container-fluid {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 
-html, body, #map {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
-#gmapC {
-  position: relative;
+body {
+  font-family: Roboto;
+  font-size: 12px;
+  color: #424242;
 }
 
+h1, h2, h3, h4, h5 {
+  margin: 0;
+}
+
+header, nav, footer, section, article {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#hh {
+  background-color: black;
+  height: 100vh;
+}
 
 .clan {
   background-color: black;
-  color: white;
+  text-align: center;
+  padding: 20px 0px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #7a7c7f;
+  border-bottom: 0.5px solid #fff;
   height: 100%;
-  width: 100%;
 }
 
+.clan:hover {
+  font-size: 27px;
+  color: #fff ;
+}
 
 #map {
   height: 100vh;
   width: 100%;
-  min-height: 100%;
-  max-height: none;
-}
-
-sapn {
-  display: block;
-  padding: 20px 80px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #fff;
-  border-bottom: 2px solid #fff;
 }
