--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,9 @@ ul {
 }
 
 .clan {
-  background-color: black;
   text-align: center;
-  padding: 20px 0px;
+  padding: 20px 15px;
+  margin: 0px 20px;
   text-decoration: none;
   font-size: 25px;
   color: #7a7c7f;
@@ -53,4 +53,26 @@ ul {
 #map {
   height: 100vh;
   width: 100%;
+}
+
+@media screen and (min-width: 1100px) {
+  .clan {
+    font-size: 17px;
+    margin: 0px 20px;
+  }
+  .clan:hover {
+    font-size: 18px;
+    color: #fff ;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .clan {
+    font-size: 14px;
+    margin: 0px 20px;
+  }
+  .clan:hover {
+    font-size: 15px;
+    color: #fff ;
+  }
 }
