--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ header, nav, footer, section, article {
   margin: 0px;
 }
 
+.navbar {
+  margin-bottom: 0px;
+}
 ul {
   list-style: none;
   padding: 0;
@@ -57,22 +60,33 @@ ul {
 
 @media screen and (min-width: 1100px) {
   .clan {
-    font-size: 17px;
+    font-size: 14px;
     margin: 0px 20px;
   }
   .clan:hover {
-    font-size: 18px;
+    font-size: 15px;
     color: #fff ;
   }
 }
 
 @media screen and (max-width: 1100px) {
   .clan {
-    font-size: 14px;
+    font-size: 12px;
     margin: 0px 20px;
   }
   .clan:hover {
-    font-size: 15px;
+    font-size: 13px;
+    color: #fff ;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .clan {
+    font-size: 10px;
+    margin: 0px 20px;
+  }
+  .clan:hover {
+    font-size: 11px;
     color: #fff ;
   }
 }
