--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,10 @@ ul {
   width: 100%;
 }
 
+.pp {
+  margin-left: 19px;
+}
+
 @media screen and (min-width: 1100px) {
   .clan {
     font-size: 14px;
@@ -86,7 +90,23 @@ ul {
   }
 }
 
+
+@media screen and (max-width: 992px) {
+  .col-md-10 {
+    width: 83.33333333%;
+    float: left;
+    position: relative;
+  }
+  .col-md-2 {
+    width: 16.6666667%;
+    position: relative;
+    float: left;
+  }
+
+}
+
 @media screen and (max-width: 600px) {
+
   .clan {
     font-size: 10px;
     margin: 0px 20px;
