--- a/css/styles.css
+++ b/css/styles.css
@@ -45,18 +45,23 @@ ul {
 
 .clan {
   text-align: center;
-  padding: 20px 15px;
-  margin: 0px 20px;
+  padding: 20px 0px;
+  margin: 0;
   text-decoration: none;
   font-size: 25px;
   color: #7a7c7f;
   border-bottom: 0.5px solid #fff;
   height: 100%;
+  cursor: url(hand.cur), pointer;
 }
 
 .clan:hover {
   font-size: 27px;
-  color: #fff ;
+  color: #fff;
+
+}
+div > li:hover {
+  background-color: #0f0e0e;
 }
 
 span {
@@ -73,11 +78,10 @@ span {
 }
 
 
-
 @media screen and (min-width: 1100px) {
   .clan {
     font-size: 14px;
-    margin: 0px 20px;
+    margin: 0px;
   }
   .clan:hover {
     font-size: 15px;
@@ -88,7 +92,7 @@ span {
 @media screen and (max-width: 1100px) {
   .clan {
     font-size: 12px;
-    margin: 0px 20px;
+    margin: 0px;
   }
   .clan:hover {
     font-size: 13px;
@@ -115,7 +119,7 @@ span {
 @media screen and (max-width: 600px) {
   .clan {
     font-size: 10px;
-    margin: 0px 20px;
+    margin: 0px;
   }
   .clan:hover {
     font-size: 11px;
@@ -128,7 +132,7 @@ span {
     width: 66.66667vw;
     position: relative;
     float: left;
-    margin-left: 25px;
+    margin-left: 0px;
   }
 
   .col-md-2 {
