--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body, html,
 .container-fluid {
   margin: 0;
@@ -12,6 +13,7 @@ body {
   font-size: 12px;
   color: #424242;
 }
+
 
 h1, h2, h3, h4, h5 {
   margin: 0;
@@ -40,7 +42,23 @@ ul {
 }
 
 .bb {
-  margin: 0px 14px;
+  margin-left: 20px;
+}
+
+
+.hb{
+  background-color: black;
+  margin-left: 20px;
+  color: white;
+  display: none;
+}
+
+.bt, .btn-default, .btn-md {
+  background-color: black;
+}
+
+.btn-default:active:click {
+  background-color: black;
 }
 
 .clan {
@@ -134,7 +152,7 @@ span {
     width: 66.66667vw;
     position: relative;
     float: left;
-    margin-left: 0px;
+    margin-left: 20px;
   }
 
   .col-md-2 {
@@ -150,5 +168,10 @@ span {
   }
   .clan {
     display: none;
+  }
+
+  .hb {
+    display: inline-block;
+  }
 
 }
