style: Add style to menu button
 Changes to be committed:
	modified:   css/styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,11 @@ ul {
   display: none;
 }
 
+.btn {
+  background-color: black;
+  color: white;
+}
+
 .bt, .btn-default, .btn-md {
   background-color: black;
 }
