--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ ul {
   background-color: black;
   margin-left: 20px;
   color: white;
-  display: none;
+  /* display: none; */
 }
 
 .btn {
@@ -103,6 +103,22 @@ span {
 }
 
 
+
+.listbox {
+  background-color: green;
+  width: 300px;
+  height: 100%;
+  position: absolute;
+  -webkit-transform: translate(-300px, 0);
+  transform: translate(-300px, 0);
+  transition: 1s ease;
+}
+
+.listbox.open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
 @media screen and (min-width: 1100px) {
   .clan {
     font-size: 14px;
@@ -152,6 +168,38 @@ span {
   }
 }
 
+
+
+
+
+
+@media screen and (min-width: 600px) {
+  .nav {
+    position: relative;
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+  body {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+
+  }
+  #mp {
+    width: auto;
+      flex-grow: 1.0;
+  }
+  /* button { */
+  /* display: none; */
+  /* } */
+
+}
+
+
+
+
+/*
 @media screen and (max-width: 420px) {
   .input-group {
     width: 66.66667vw;
@@ -184,3 +232,4 @@ span {
   }
 
 }
+*/
